--- a/client/styles/partials/_module.less
+++ b/client/styles/partials/_module.less
@@ -122,6 +122,10 @@
 
 .workContainer {
   width: 95%;
+  > .h {
+    padding: 5px 7px;
+    background-color: #eee;
+  }
 }
 
 .deleteWork:hover {
